# deepin-kwin

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  DeepinKWinDBusInterfaceConfig.cmake.in  KWinDBusInterfaceConfig.cmake.in  README.md  README.zh_CN.md  REUSE.toml  abstract_client.cpp  abstract_client.h  abstract_opengl_context_attribute_builder.cpp  abstract_opengl_context_attribute_builder.h  abstract_output.cpp  abstract_output.h  activation.cpp  activities.cpp  activities.h  appmenu.cpp  appmenu.h  atoms.cpp  atoms.h  client.cpp  client.h  client_machine.cpp  client_machine.h  composite.cpp  composite.h  config-kwin.h.cmake  cursor.cpp  cursor.h  dbusinterface.cpp  dbusinterface.h  debug_console.cpp  debug_console.h  deepin-kwin_wayland.service.in  deepin-kwin_x11.service.in  deleted.cpp  deleted.h  dmabuftexture.cpp  (+166 more)
autotests/libinput/: CMakeLists.txt  context_test.cpp  device_test.cpp  gesture_event_test.cpp  input_event_test.cpp  key_event_test.cpp  mock_libinput.cpp  mock_libinput.h  pointer_event_test.cpp  switch_event_test.cpp  touch_event_test.cpp
autotests/libkwineffects/: CMakeLists.txt  kwinglplatformtest.cpp  timelinetest.cpp  windowquadlisttest.cpp
autotests/libxrenderutils/: CMakeLists.txt  blendpicture_test.cpp
configures/: CMakeLists.txt  deepin-kwinrc  deepin-kwinrulesrc  kwin_no_scale.in  org.deepin.kwin.json  org.deepin.kwin.splitmenu.display.json  org.kde.kwin.compositing.json
data/: CMakeLists.txt  deepin-kglobalacceld.desktop.in  org_kde_kwin.categories  update_default_rules.cpp
data/icons/: CMakeLists.txt
kdecoration/: .git-blame-ignore-revs  CMakeLists.txt  KDecoration2Config.cmake.in  README.md  metainfo.yaml
kdecoration/autotests/: CMakeLists.txt  decorationbuttontest.cpp  decorationtest.cpp  mockbridge.cpp  mockbridge.h  mockbutton.cpp  mockbutton.h  mockclient.cpp  mockclient.h  mockdecoration.cpp  mockdecoration.h  mocksettings.cpp  mocksettings.h  shadowtest.cpp
kdecoration/src/: CMakeLists.txt  Messages.sh  decoratedclient.cpp  decoratedclient.h  decoration.cpp  decoration.h  decoration_p.h  decorationbutton.cpp  decorationbutton.h  decorationbutton_p.h  decorationbuttongroup.cpp  decorationbuttongroup.h  decorationbuttongroup_p.h  decorationdefines.h  decorationsettings.cpp  decorationsettings.h  decorationshadow.cpp  decorationshadow.h  decorationshadow_p.h  decorationthemeprovider.cpp  decorationthemeprovider.h
plugins/: CMakeLists.txt
plugins/idletime/: poller.cpp  poller.h
plugins/kdecorations/: CMakeLists.txt
plugins/kglobalaccel/: kglobalaccel_plugin.cpp  kglobalaccel_plugin.h
plugins/qpa/: abstractplatformcontext.cpp  abstractplatformcontext.h  backingstore.cpp  backingstore.h  integration.cpp  integration.h  main.cpp  nativeinterface.cpp  nativeinterface.h  platformcontextwayland.cpp  platformcontextwayland.h  screen.cpp  screen.h  sharingplatformcontext.cpp  sharingplatformcontext.h  window.cpp  window.h
src/: CMakeLists.txt  Messages.sh  abstract_client.cpp  abstract_client.h  abstract_output.cpp  abstract_output.h  abstract_wayland_output.cpp  abstract_wayland_output.h  activation.cpp  activities.cpp  activities.h  appmenu.cpp  appmenu.h  atoms.cpp  atoms.h  client_machine.cpp  colordevice.h  colormanager.h  composite.cpp  composite.h  config-kwin.h.cmake  configreader.cpp  configreader.h  cursor.h  cursordelegate_opengl.cpp  cursorsource.h  dbusinterface.cpp  dbusinterface.h  debug_console.cpp  debug_console.h  debugpixmap.cpp  debugpixmap.h  decorationitem.cpp  deepin-kwin.kcfg  deleted.cpp  deleted.h  dmabuftexture.cpp  dmabuftexture.h  dockrect.cpp  dockrect.h  (+169 more)
src/colors/: colordevice.h  colormanager.h
src/core/: colorlut.cpp  colorlut.h  colorpipelinestage.h  colortransformation.h  gbmloader.cpp  gbmloader.h  inputbackend.h  inputdevice.cpp  inputdevice.h  output.cpp  output.h  outputbackend.cpp  outputbackend.h  outputconfiguration.cpp  outputconfiguration.h  outputlayer.h  overlaywindow.h  renderbackend.h  renderjournal.h  renderlayer.h  renderlayerdelegate.h  renderloop.cpp  renderloop.h  renderloop_p.h  rendertarget.cpp  rendertarget.h  session.h  session_logind.cpp  session_logind.h
src/decorations/: decoratedclient.cpp  decoratedclient.h  decoratedwindow.cpp  decoratedwindow.h  decorationbridge.cpp  decorationbridge.h  decorationpalette.cpp  settings.cpp  settings.h
src/effects/: CMakeLists.txt
src/kcms/: CMakeLists.txt
src/libkwineffects/: CMakeLists.txt  KWinEffectsConfig.cmake.in  Mainpage.dox  anidata_p.h  deepin-kwinanimationeffect.cpp  deepin-kwinanimationeffect.h  deepin-kwineffects.cpp  deepin-kwineffects.h  deepin-kwineffectsex.cpp  deepin-kwineffectsex.h  deepin-kwineglimagetexture.cpp  deepin-kwineglimagetexture.h  deepin-kwinglobals.h  deepin-kwinglplatform.cpp  deepin-kwinglplatform.h  deepin-kwingltexture.cpp  deepin-kwingltexture.h  deepin-kwingltexture_p.h  deepin-kwinglutils.cpp  deepin-kwinglutils.h  deepin-kwinglutils_funcs.cpp  deepin-kwinglutils_funcs.h  deepin-kwinoffscreeneffect.cpp  deepin-kwinoffscreeneffect.h  deepin-kwinoffscreenquickview.cpp  deepin-kwinoffscreenquickview.h  deepin-kwinquickeffect.cpp  deepin-kwinquickeffect.h  deepin_kwinanimationeffect.cpp  deepin_kwinanimationeffect.h  deepin_kwindeformeffect.cpp  deepin_kwindeformeffect.h  deepin_kwineffects.cpp  deepin_kwineffects.h  deepin_kwineffectsex.cpp  deepin_kwineffectsex.h  deepin_kwinglobals.h  deepin_kwinglplatform.h  deepin_kwingltexture.h  deepin_kwinglutils.h  (+28 more)
src/plugins/: CMakeLists.txt
src/qml/: CMakeLists.txt
src/scene/: cursorscene.h  decorationitem.cpp  decorationitem.h  imageitem.cpp  imageitem.h  item.h  itemrenderer.h  itemrenderer_opengl.cpp  itemrenderer_opengl.h  itemrenderer_qpainter.h  itemrenderer_xrender.cpp  itemrenderer_xrender.h  scene.cpp  scene.h  shadowitem.h  surfaceitem.cpp  surfaceitem.h  surfaceitem_internal.h  surfaceitem_wayland.cpp  (+13 more)
tests/: CMakeLists.txt  drm_iterator_test.cc  drm_test.cc  gbm_test.cc  libinput_test.cc  pointerconstraintstest.cpp  pointergesturestest.cpp  pointergesturestest.qml  screenedgeshowtest.cpp  test-prj-running.sh
(+2994 files in other folders)
